Fix misalignment

--- a/src/oss4climate_app/static/css/styles.css
+++ b/src/oss4climate_app/static/css/styles.css
@@ -66,7 +66,7 @@ a.nav_link {
 /* Search form styling */
 .search_form_box{
     width: 45%;
-    margin-top: 40px;
+    margin-top: 30px;
     margin-bottom: 60px;
   }
 
@@ -93,7 +93,7 @@ a.nav_link {
 
 .search_button {
   width: 100px;
-  height: 46px;
+  height: 47px;
   border: 1px solid #04a82d;
   background: #04a82d;
   text-align: center;
